# whispering_oaks

./: BUILD.md  Cargo.toml  README.md  Workspace.toml
bin_main/: Cargo.toml
bin_main/src/: main.rs
lib_args/: Cargo.toml
lib_args/src/: matches.rs  t_help_clear.txt  t_help_decrypt.txt  t_help_filename.txt  t_help_keylist.txt  t_help_omit_recipient.txt  t_help_recipient.txt  t_help_template.txt  t_help_template_list.txt
lib_cipher/: Cargo.toml
lib_cipher/src/: decrypt.rs  encrypt.rs  gnupg.rs  lib.rs  template.rs
lib_fs/: Cargo.toml
lib_fs/src/: lib.rs  make.rs  read.rs  vbin.rs  vdir.rs  verify.rs  vfile.rs  wreck.rs
lib_misc/: Cargo.toml
lib_misc/src/: env.rs  err.rs  gen.rs  lib.rs
lib_proc/: Cargo.toml
lib_proc/src/: init.rs
lib_procs/: Cargo.toml
lib_procs/src/: build.rs  init.rs
src/: main.rs
src/lib/: a_application_libs.rs  applibs.rs  c_cli_arguments.rs  c_editor_selection.rs  c_file_actions.rs  c_file_cryptography.rs  cliargs.rs  depends.rs  encrypt.rs  help_recipient.txt  tmpfile.rs
