[package]
name = "whispering_oaks"
version = "1.1.0"
edition = "2021"
authors = ["Michael A Jones"]
license = "GNU General Public License v3.0 (GPL-3.0 license)"
description = ""
repository = ""
keywords = ["rust", "gpg", "encrypt", "editor"]
documentation = ""
categories = ["security"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libs"
path = "src/lib/a_application_libs.rs"

[dependencies]
rand = "0.8.5"
clap = {version = "4.4.7", features = ["derive"]}
expectrl = "0.7.1"
# tokio = {version = "1", features = ["full"]}
# async-std = "1.8.0"
# dirs = "5.0.1"
# serde = {version = "1.0.190", features = ["derive"]}
# serde_json = "1.0.64"

