[package]
name = "lib_misc"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rand = "0.8.5"
